Update giao diện Cart
+ đã sửa các jsp, xóa báo số lượng đơn của Order History (profile.jsp, changePassword.jsp, viewOrder.jsp, orderHistory.jsp, header.jsp)
+ (gộp code từ Mai 15/12) đã làm lại giao diện cart.jsp